<?xml version="1.0"?>
<package format="2">
  <name>marv_drivers</name>
  <version>1.1.4</version>
  <description>marv drivers</description>
  <maintainer email="adarsh@wherever.com">AK</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>wget</test_depend>
</package>
